--- a/src/Components/ChosenForU.module.css
+++ b/src/Components/ChosenForU.module.css
@@ -1,10 +1,11 @@
 .all-products{
-    width: 100%;
+    width: 100vw;
     overflow: hidden;
     display:flex;
     margin: 16px 0;
    flex-direction: column;
    background: #fff;
+   min-width:100vw;
 }
 .all-products h2{
     font-size: 1.2rem;
@@ -16,10 +17,16 @@
     justify-content: center;
 }
 .all-products-container{
-    width: 100%;
+    width: 100vw;
     display:flex;
     scroll-behavior: smooth;
     scroll-snap-type:x mandatory;
     overflow-x: scroll;
     text-align: center;
+}
+@media screen and (max-width:780px){
+    .all-products-container{
+        width:100vw;
+        min-width:100vw;
+    }
 }
