--- a/src/Components/SingleAnniversary.module.css
+++ b/src/Components/SingleAnniversary.module.css
@@ -1,9 +1,10 @@
 .single-product{
    margin: 8px;
+  
    cursor: pointer;
-   min-height: 350px;
+   /* min-height: 350px; */
    height: auto;
-   box-shadow: 4px;
+   border-radius: 4px;
    
 }
 .single-product:hover{
@@ -12,7 +13,7 @@
 }
 .image{
     width: calc(25% - 8px);
-    width: 192px;
+    /* width: 192px; */
 }
 .image img{
     width: 100%;
@@ -97,4 +98,21 @@
     background-repeat: repeat-x;
     background-size: contain;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23f6b01e' width='16' height='12'%3E%3Cpath  d='M8.58.38l1.35 2.86c.1.2.28.34.49.37l3.03.46c.53.08.74.77.35 1.16l-2.19 2.23a.7.7 0 0 0-.18.6l.52 3.15c.09.55-.47.97-.94.71l-2.7-1.49a.62.62 0 0 0-.61 0L5 11.93c-.48.25-1.04-.17-.95-.72l.52-3.15a.7.7 0 0 0-.18-.6l-2.2-2.23c-.38-.4-.17-1.08.36-1.16l3.03-.46c.21-.03.4-.17.49-.37L7.42.38c.24-.5.92-.5 1.16 0z'/%3E%3C/svg%3E");
+}
+
+@media screen and (max-width:780px){
+     .single-product{
+        margin:4px;
+        width: calc(50% - 8px);
+         background: #fff;
+    }
+    .image{
+    width: 100%;
+    object-fit:contain;
+}
+   
+    .single-product button{
+        visibility:visible;
+        margin: 16px auto;
+    }
 }
