--- a/src/Components/SingleProduct.module.css
+++ b/src/Components/SingleProduct.module.css
@@ -15,3 +15,10 @@
     width: 100%;
     object-fit: contain;
 }
+
+@media screen and (max-width:780px){
+    .product{
+        width:calc(45% - 8px);
+        width:300px;
+    }
+}
