--- a/src/Pages/Home.module.css
+++ b/src/Pages/Home.module.css
@@ -35,3 +35,9 @@ cursor: pointer;
 .sidebar-anniversary{
     display: flex;
 }
+@media screen and (max-width:780px){
+    main{
+        max-width:100vw;
+        min-width:100vw;
+    }
+}
