--- a/src/Components/SingleAnniversary.module.css
+++ b/src/Components/SingleAnniversary.module.css
@@ -2,7 +2,7 @@
    margin: 8px;
   
    cursor: pointer;
-   /* min-height: 350px; */
+   min-height: 350px; 
    height: auto;
    border-radius: 4px;
    
@@ -13,7 +13,7 @@
 }
 .image{
     width: calc(25% - 8px);
-    /* width: 192px; */
+    width: 192px; 
 }
 .image img{
     width: 100%;
