--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -1,12 +1,14 @@
 .ad {
-    width: 100vw;
-   height: auto;
+    width: 100%;
+    
     cursor: pointer;
     max-width: 1184px;
     margin: 0 auto;
+    object-fit: contain;
 }
 .ad img {
-    width: 100%;
+    max-width: 100%;
+    
     object-fit: cover;
 }
 .icons{
@@ -25,6 +27,7 @@ display: flex;
 align-items: center;
 justify-content:center;
 width: 100vw;
+flex-direction: column;
 }
 .nav {
    width: 100%;
@@ -105,18 +108,52 @@ align-items: center;
     
 }
 
+ 
+
 @media screen and (min-width:780px){
     .ad {
         height: 4rem;
+        object-fit: cover;
     }
+    .ad img {
+         flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%;
+    display: block;
+    width: 100%;
+    height: 100%;
+    height: 4rem;
+    object-fit: cover;
+    
+}
     
     .icons{
         display: flex;
+    }
+    .search-input{
+        display: none;
     }
     
 
 }
 @media screen and (max-width:780px){
+    
+
+     .ad {
+        height: 2.5rem;
+        object-fit: cover;
+    }
+    .ad img {
+    flex-shrink: 0;
+    min-width: 100%;
+    min-height: 100%;
+    display: block;
+    width: 100%;
+    height: 100%;
+    height: 2.5rem;
+    object-fit: fill;
+    
+}
     
     .nav>form{
         display: none;
@@ -134,5 +171,35 @@ align-items: center;
     .cart-text{
         display: none;
     }
+.nav-container{
+    height: auto;
+    padding: 8px;
+}
+    .search-input{
+    display: block;
+    margin: 0 8px;
+   border: 1px solid #c7c7cd;
+   overflow: hidden;
+   border-radius: 99px;
+   height: 32px;
+   padding: 0 8px;
+   margin: 0 4px;
+   display: flex;
+   align-items: center;
+   margin: 16px 4px 4px 4px;
+   width: calc(100% - 16px);
+}
+.search-input input {
+    height: 100%;
+    width: 100%;
+    border: none;
+    outline: none;
+}
+.search-input button {
+    background: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
 
 }
