--- a/src/Components/SingleProduct.module.css
+++ b/src/Components/SingleProduct.module.css
@@ -1,5 +1,5 @@
 .product{
-    padding: 8px 8px;
+    padding: 8px 0px;
     flex-shrink: 0;
     font-size: .875rem;
     cursor: pointer;
@@ -9,7 +9,17 @@
     overflow: hidden;
     border-radius: 4px;
     text-overflow: ellipsis;
-    width: calc(16.666666666% - 4px ) ;
+    width: calc(16.666666666% - 50px ) ;
+    margin-bottom: 16px;
+
+
+}
+.product:hover{
+    transform:scale(1.01);
+    
+}
+.prdoduct:hover p{
+    box-shadow: 2px 2px 10px 0 gray;
 }
 
 @media screen and (max-width:780px){
