--- a/src/Components/TopDeals.module.css
+++ b/src/Components/TopDeals.module.css
@@ -6,6 +6,8 @@
     margin: 16px 0;
    flex-direction: column;
    background: #fff;
+   padding: 0 24px;
+   
 }
 .all-products h2{
     font-size: 1.2rem;
@@ -22,8 +24,34 @@
     display:flex;
     scroll-behavior: smooth;
     scroll-snap-type:x mandatory;
-    overflow-x: scroll;
+    overflow-x: hidden;
     text-align: center;
+    
+}
+
+.scroll-left,.scroll-right{
+    position: absolute;
+    border: none;
+    border-radius: 50%;
+    padding: 8px;
+    background-color: rgba(40,40,40,0.5);
+    z-index: 20;
+    cursor: pointer;
+}
+.scroll-left{
+    transform:translateX(-23px) translateY(55px);
+}
+.scroll-right{
+    transform:translateX(1084px) translateY(55px);
+
+}
+.all-products button:active{
+    outline: none;
+    border: none;
+}
+ .all-products button:focus {
+    outline: none;
+    border: none;
 }
 @media screen and (max-width:780px){
     overflow:;
