--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -158,12 +158,12 @@ align-items: center;
     color: #fff;
     border: 2px solid #fff;
     border-radius: 100%;
-    min-height: 12px;
-    min-width: 12px;
-    max-height: 18px;
-    max-width: 18px;
-    padding: 2px 4px;
-    padding:2px;
+    height: 20px;
+    width: 20px;
+    max-height:20px;
+    max-width: 20px;
+   
+    
 }
 /* end cart */
  
