--- a/src/Components/ChosenForU.module.css
+++ b/src/Components/ChosenForU.module.css
@@ -9,12 +9,14 @@
 }
 .all-products h2{
     font-size: 1.2rem;
-    text-transform: uppercase;
     font-weight: 500;
     min-height: 48px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
+    padding-left: 8px;
+    background-color: #E2F5FF;
+  
 }
 .all-products-container{
     display:flex;
