--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -69,11 +69,24 @@ align-items: center;
     cursor: pointer;
    
 }
-.nav>div:hover ,
-.nav>div:hover .svg-icon{
+.nav button {
+     display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;   
+    cursor: pointer;
+}
+
+.nav>div:hover .text,
+
+.nav>div:hover,
+.nav>div:hover .svg-icon,
+.nav>div button:hover {
     stroke: #f68b1e;
     color: #f68b1e;
     fill: #f68b1e;
+    border: none;
+    outline: none;
 }
 .nav>div>span {
     margin: 0 0 0 8px;
@@ -104,30 +117,15 @@ align-items: center;
     outline: none;
     vertical-align: middle;
 }
-.nav button {
-    border: none;
-    outline: none;
-    background: transparent;
-    outline: none;
-    text-align: center;
-}
+
 .nav button.search-btn-icon{
     margin: auto 8px;
     font-size: .875rem;
 }
-.nav button.search{
-    cursor: pointer;
-    background-color: #f68b1e;
-    padding: 12px 16px;
-    color: #fff;
-    text-transform: uppercase;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    border-radius: 4px;
-    margin-left: 8px;
-    font-size: .875rem;
-    line-height: 1rem;
-    font-weight: 500;
-    
+
+.login {
+    flex-direction: column;
+    position: relative;
 }
 /* cart */
 .cart-icon{
