--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,10 @@ body{
   padding: 0;
   box-sizing: border-box;
 }
+button{
+  background: transparent;
+  border: none;
+    outline: none;
+    outline: none;
+    text-align: center;
+}
