some chosen for you to top deals for you

--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -225,8 +225,8 @@ align-items: center;
     }
 .nav-container{
     height: auto;
-    
     padding: 8px;
+    align-items: stretch;
 }
     .search-input{
     display: block;
