--- a/src/Components/Header/MobileHeader.module.css
+++ b/src/Components/Header/MobileHeader.module.css
@@ -13,6 +13,7 @@ top: 0px;
 box-shadow: 0 4px 4px -4px rgba(0,0,0,0.12);
 padding: 0px;
 padding-top: 8px;
+padding-bottom: 4px;
 height:auto;
 }
 .nav{
