--- a/src/Pages/Home.module.css
+++ b/src/Pages/Home.module.css
@@ -35,6 +35,9 @@ cursor: pointer;
 .sidebar-anniversary{
     display: flex;
 }
+.dynamic{
+    position: relative;
+}
 @media screen and (max-width:780px){
     main{
         max-width:100vw;
