--- a/src/Components/ChosenForU.module.css
+++ b/src/Components/ChosenForU.module.css
@@ -22,12 +22,13 @@
     display:flex;
     scroll-behavior: smooth;
     scroll-snap-type:x mandatory;
-    overflow-x: scroll;
-   
+    overflow: hidden;
+
 }
 @media screen and (max-width:780px){
     .all-products-container{
         width:100vw;
         min-width:100vw;
+        overflow-x: auto;
     }
 }
