--- a/src/Components/Anniversary.module.css
+++ b/src/Components/Anniversary.module.css
@@ -1,6 +1,5 @@
 .anniversary-container{
     padding: 8px;
-    margin-left: 16px;
     background: #fff;
     border-radius:4px;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.05);
@@ -9,6 +8,7 @@
     max-width: 100%;
     min-width: 100%;
     width: 100%;
+    margin-top:16px;
 }
 .anniversary{
     display: flex;
