--- a/src/Components/Footer.module.css
+++ b/src/Components/Footer.module.css
@@ -5,6 +5,7 @@
     padding-bottom: 16px;
     width:100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
