--- a/src/Components/Header/MobileHeader.module.css
+++ b/src/Components/Header/MobileHeader.module.css
@@ -108,4 +108,9 @@ height:auto;
     max-width: 20px;
     vertical-align: middle;
 }
+span i{
+    width: 24px;
+    height: 24px;
+    font-size: 24px;
+}
 
