--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -161,6 +161,9 @@
     width: 20px;
     max-height:20px;
     max-width: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 /* end cart */
  
